# Cash-Cage

./: .firebaserc  .gitignore  README.md  firestore.rules
backend/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.lambda
backend/src/: lambda_main.cpp  main.cpp
backend/src/handlers/: settlement_handler.hpp  settlement_logic.hpp
backend/src/models/: types.hpp
backend/src/solvers/: milp_solver.cpp  milp_solver.hpp
backend/src/utils/: json_helpers.hpp
frontend/: .easignore  .gitignore  app.json  eas.json  package-lock.json  package.json
frontend/app/: _layout.tsx
frontend/app/(auth)/: _layout.tsx  forgot-password.tsx  login.tsx  signup.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  two.tsx
frontend/app/game/: active.tsx  (+2 more)
frontend/components/: AppModal.tsx  Button.tsx  CashUnitPickerModal.tsx  CurrencyPickerModal.tsx  GameCard.tsx  HistoryMonthHeader.tsx  HudSectionHeader.tsx  ModalButton.tsx  OfflineBanner.tsx  PaymentEditorModal.tsx  PaywallModal.tsx  PlayerCardActive.tsx  PlayerCardCompleted.tsx  SavedPlayerCard.tsx  SettlementModePicker.tsx  Themed.tsx  useColorScheme.ts
frontend/constants/: CashUnits.ts  Colors.ts  Currencies.ts  PaymentMethods.ts
frontend/contexts/: AuthContext.tsx  CurrencyContext.tsx  GameContext.tsx  NetworkContext.tsx
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/hooks/: useReduceMotion.ts
frontend/plugins/: withAutofillColorFix.js
frontend/services/: firebaseService.ts  gameService.ts  revenueCatService.ts  savedPlayersService.ts  settlementService.ts  storageService.ts  syncService.ts
frontend/styles/: modal.ts
frontend/types/: game.ts
frontend/utils/: addPlayer.ts  formatUtils.ts  hashUtils.ts  historyGrouping.ts  keyboardLift.ts  modalBackdrop.ts  paymentLinks.ts  roundingUtils.ts  settlementUtils.ts  shareMessage.ts  trialUtils.ts  validationUtils.ts
tools/appstore-screenshots/: .gitignore  package-lock.json  package.json  render.mjs  slides.config.mjs
(+45 files in other folders)
